# internal/router/router.go
@@ -10,6 +10,8 @@ import (
 func NewRouter(
 	userController *controllers.UserController,
 	petController *controllers.PetController,
+	activePetEvolutionHistoryController *controllers.ActivePetEvolutionHistoryController,
+	petGrowthRecordController *controllers.PetGrowthRecordController,
 	postController *controllers.PostController,
 	reportController *controllers.ReportController,
 	notificationController *controllers.NotificationController,
@@ -37,6 +39,8 @@ func NewRouter(
 	mux.Handle("/subsc/history_pet", middleware.Auth(http.HandlerFunc(petController.History)))
 	mux.Handle("GET /subsc/allPets", middleware.Premium(http.HandlerFunc(petController.All)))
 	mux.Handle("PUT /subsc/pet/{pet_id}", middleware.Premium(http.HandlerFunc(petController.UpdateProfile)))
+	mux.Handle("GET /pets/active/evolutions", middleware.Auth(http.HandlerFunc(activePetEvolutionHistoryController.Find)))
+	mux.Handle("GET /subsc/growth_records/{pet_id}", middleware.Premium(http.HandlerFunc(petGrowthRecordController.FindByPetID)))
 
 	mux.HandleFunc("POST /posts", postController.Create)
 	mux.HandleFunc("GET /posts/{pet_id}", postController.FindByPetIDPost)
